THRIFT-2065 Not valid constants filename in Java

Patch: Jens Geyer